GS-12991 Marketing: Remove Tips from acquisition points - fixing border/layout problem with increasing content in divs

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -7734,18 +7734,18 @@ body.ie8 #savvysource span.arrow-right {
     padding-top: 1px;
 }
 
-.nlSubscription div.line {
+.nlSubscription div.line{
     border-top: 1px solid #ECECEC;
     border-bottom: 1px solid #ECECEC;
+    background-image: url(/res/img/nlSignUp/nlSignUpbackground.png);
+    background-repeat: repeat-y;
 }
 
-.nlSubscription div.line div.unit {
-    height: 370px;
-}
-
-.nlSubscription div.line div.unit.middle {
-    border-left: 1px solid #ECECEC;
-    border-right: 1px solid #ECECEC;
+.nlSubscription div.lineForIframe {
+    border-top: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
+    background-image: url(/res/img/nlSignUp/nlSignUpbackgroundForIframe.png);
+    background-repeat: repeat-y;
 }
 
 .nlSubscription .error{
